test/spec_vectors/block/fail/module_14.wat
(module (func $type-empty-i64 (result i64) (block)))